Fix lack of alignment in modal legend box

--- a/app/components/content/ImpactLegend/style.scss
+++ b/app/components/content/ImpactLegend/style.scss
@@ -1,5 +1,7 @@
 #legend-impact {
 
+  font-size: 14px;
+
   > ul {
     > li:nth-child(odd) {
       font-size: 14px;
