--- a/app/components/content/ReachLegend/style.scss
+++ b/app/components/content/ReachLegend/style.scss
@@ -3,6 +3,8 @@
 
 #legend-reach {
 
+  font-size: 14px;
+
   a {
     text-transform: uppercase;
     color: $font-color-3;
