--- a/app/components/elements/ModalBox/style.scss
+++ b/app/components/elements/ModalBox/style.scss
@@ -55,7 +55,7 @@
     &.modal-id-impactLegend,
     &.modal-id-reachLegend {
       padding: 50px 15px 15px 15px;
-      max-width: 400px;
+      max-width: 360px;
     }
   }
 
